@@ -14,6 +14,14 @@ public class Lwjgl3WindowAdapter implements Lwjgl3WindowListener {
 	@Override
 	public void deiconified() {
 	}
+	
+	@Override
+	public void maximized() {
+	}
+	
+	@Override
+	public void demaximized() {
+	}
 
 	@Override
 	public void focusLost() {
